tests/ui/compile-fail/init/shadowing_field.stderr
error[E0308]: mismatched types
  --> tests/ui/compile-fail/init/shadowing_field.rs:10:13
   |
10 |     let _ = init!(Foo { x, y: x });
   |             ^^^^^^^^^^^^^^^^^^^^^^
   |             |
   |             expected `usize`, found `&mut usize`
   |             arguments to this function are incorrect
   |
note: function defined here
  --> $RUST/core/src/ptr/mod.rs
   |
   | pub const unsafe fn write<T>(dst: *mut T, src: T) {
   |                     ^^^^^
   = note: this error originates in the macro `$crate::__init_internal` which comes from the expansion of the macro `init` (in Nightly builds, run with -Z macro-backtrace for more info)
